fix flat button and spacing.

--- a/app/assets/stylesheets/_material-design-overwrites.scss
+++ b/app/assets/stylesheets/_material-design-overwrites.scss
@@ -130,3 +130,7 @@ div.dataTables_filter {
 
   font-weight: 300;
 }
+
+.btn-group {
+  box-shadow: none;
+}
